--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: blogcm
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: a simple document record of my app configurations
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/blogcm/blogcm.github.io/blob/master/images/butcher.png
 
 #
 # Flags below are optional
