--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ name: blogcm
 description: a simple document record of my app configurations
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/blogcm/blogcm.github.io/blob/master/images/butcher.png
-
+#avatar: https://github.com/blogcm/blogcm.github.io/blob/master/images/butcher.png
+avatar: https://raw.githubusercontent.com/blogcm/blogcm.github.io/master/images/butcher.png
 #
 # Flags below are optional
 #
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: chenmingzhang
   instagram:
   linkedin:
   pinterest:
